2003-09-19  Christopher Faylor  <cgf@redhat.com>

	* thread.h (__reent_t::init_clib): Declare new function.
	* thread.cc (__reent_t::init_clib): Define new function.
	(pthread::thread_init_wrapper): Use __reent_t::init_clib to init local
	clib storage and set std{in,out,err} appropriately.

2003-09-19  Christopher Faylor  <cgf@redhat.com>

	* syscalls.cc (system): Strip signal considerations from here so that
	they are not inherited by a child process.
	* spawn.cc (spawn_guts): Handle system() signal stuff here.
	* winsup.h (_P_SYSTEM): Define.

2003-09-18  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_pty_master::process_slave_output): Handle
	buf == NULL as flushing the buffer.
	(fhandler_tty_slave::read): Handle ptr == NULL as flushing the buffer.
	(fhandler_tty_slave::tcflush): Implement input queue flushing by
	calling read with NULL buffer.
	(fhandler_pty_master::tcflush): Ditto, calling process_slave_output.
	* termios.cc (tcflush): Check for legal `queue' value.  Return EINVAL
	otherwise.

2003-09-18  Brian Ford  <ford@vss.fsi.com>

        * syscalls.cc (gethostid): Add lpFreeBytesAvailable argument to
        GetDiskFreeSpaceEx call since NT4 requires it.

2003-09-18  Christopher Faylor  <cgf@redhat.com>

        * fhandler_disk_file.cc (path_conv::ndisk_links): Fix potential
        off-by-one problem when first file in a directory is a directory.

2003-09-18  Christopher Faylor  <cgf@redhat.com>

        * Makefile.in: Make malloc_wrapper -fomit-frame-pointer.

        * cygwin.din: Remove extraneous mallinfo definition.

        * dcrt0.cc (quoted): Use strechr for efficiency.

2003-09-18  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (sig_handle_tty_stop): Fix boneheaded mistake by using
	correct check for parent state rather than inverted check.

2003-09-18  Christopher Faylor  <cgf@redhat.com>

	* getopt.c (opterr): Reinstate initialization.
	(optind): Ditto.
	(optopt): Ditto.
